# Qsequence

./: .clang-format  .gitignore  CMakeLists.txt  Qsequence  Qsequence.pro  README.md  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  worker.cpp  worker.h
Qsequence_autogen/: deps
Qsequence_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
